--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">SMART SECURITY LIGHTS </string>
     <string name="face"> protecting you </string>
-    <string name="on">ON</string>
-    <string name="off">OFF</string>
+    <string name="on">bluetoothon</string>
+    <string name="off">bluetoothoff</string>
     <string name="sett">SET</string>
+    <string name="switch1">switch1</string>
+    <string name="Off">discoverNewDevices</string>
+    <string name="On">showPairedDevices</string>
+    <string name="Visible">getVisible</string>
+    <string name="blue">Bluetooth</string>
+
 </resources>
